--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "discord.js": "^14.18.0",
     "dotenv": "^16.5.0",
