--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-# Ignore node_modules inside the server folder
+# Node modules
+/node_modules
 /server/node_modules/
 
-# Ignore environment config
+# Environment variables
 /server/.env
 
 # Logs
