--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "pino-pretty": "^13.0.0"
   }
 }
