--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,6 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
-    "pino-pretty": "^13.0.0"
+    "nodemon": "^3.1.9"
   }
 }
