--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "discord.js": "^14.18.0",
     "dotenv": "^16.5.0",
     "ethers": "^6.13.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
