--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "axios": "^1.9.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.5.0",
     "ethers": "^6.13.7",
