--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
+  "type": "module",
   "dependencies": {
+    "axios": "^1.9.0",
+    "discord.js": "^14.19.1",
     "dotenv": "^16.5.0",
+    "ethers": "^6.13.7",
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
     "ws": "^8.18.1"
   },
   "scripts": {
-    "start": "node server/index.js"
-  },
+    "start": "node index.js"
+  }
 }
